--- a/04-village.rmd
+++ b/04-village.rmd
@@ -5,8 +5,6 @@
 
 ![[A village in Switzerland](https://www.rt.com/news/231927-fights-rada-ukrainian-mps/)](img/8.png)
 
-[A village in Switzerland](https://www.rt.com/news/231927-fights-rada-ukrainian-mps/)
-
 After the hustle and bustle of the carnival, you arrive at the village. Things are calmer and more predictable. They have also slowed down. New people come and old people leave in an expected, orderly fashion. 
 
 You have passed, or are going to pass Dunbar’s number. There is a high chance that there are chunks of people in your community completely unaware of each other. You have made a name and a space for yourself. Now is the time to form alliances and exploring new territories while maintaining what you have built.
@@ -15,7 +13,7 @@ You have passed, or are going to pass Dunbar’s number. There is a high chance 
 
 If you have reached this stage, your community has succeeded in making a name and carving out a space for itself. You must now shift your focus to forming alliances and exploring new territories, while maintaining what you have built.
 
-### Maintain your community {-}
+### Maintaining your community {-}
 
 Let’s revisit the idea of communities being gardens. 
 
@@ -23,7 +21,7 @@ A vibrant and a colourful garden requires high levels of maintenance. This means
 
 Similarly, you should focus on improving the experience of participating in your community, reinforcing positive behaviours and being on the lookout for subtle winds of change that could turn into storms in the future.
 
-### Expand your influence {-}
+### Expanding your influence {-}
 
 As your community matures, you either find yourself having achieved the goal you initially set out to achieve, or, you find yourself no longer captivated by that mission. In either cases, there is a tangible sense of stagnation in your community. You must address this by introducing ideas of expansion and focussing on a different or a bigger goal.
 
@@ -33,60 +31,58 @@ Is there a way to player a large role in the ecosystem you are a part of? Is the
 
 The village is a comfortable place to stay. It is also where most communities go and die. You must continue to fan curiosity and keep the explorer spirit alive.
 
-### Approaching maintenance {-}
+### Activity 20: Guarding the gates. {-}
 
-Taking a closer look at how your community moves.
-
-*Activity 19: Guarding the gates.*
+> ℹ️ **Approaching maintenance** 
+>
+>Taking a closer look at how your community moves.
 
 If you have reached the village, the raw experience of participating in your community is validate. Now, you must refine the onboarding and offboarding process.
 
-- Optimize your onboarding flow.
-    - A smooth onboarding flow encourages new members to become participants instead of spectators.
+* Optimize your onboarding flow.
+    * A smooth onboarding flow encourages new members to become participants instead of spectators.
     - Revisit your initiation rituals. Now that you have more resources at your disposal, how can you improve this experience?
-    - Perhaps, have a regular onboarding call weekly or fortnightly. Assign buddies to each new member to help them navigate the community. Or, personally reach out to new members and schedule a brief conversation with them.
-- Optimize your offboarding flow.
-    - A smooth offboarding flow turns leaving members into assets for the community.
-    - How do you ensure that members leave on a good note?
-    - Be open to any feedback you receive from exiting members, and do your best to help them go wherever it is that they want to go next. It may not benefit you immediately, but it will create goodwill with your exiting member that will payback in due time.
+    * Perhaps, have a regular onboarding call weekly or fortnightly. Assign buddies to each new member to help them navigate the community. Or, personally reach out to new members and schedule a brief conversation with them.
+* Optimize your offboarding flow.
+    * A smooth offboarding flow turns leaving members into assets for the community.
+    * How do you ensure that members leave on a good note?
+    * Be open to any feedback you receive from exiting members, and do your best to help them go wherever it is that they want to go next. It may not benefit you immediately, but it will create goodwill with your exiting member that will payback in due time.
 
-*Activity 20: Get really good at giving and receiving feedback.*
+### Activity 21: Get really good at giving and receiving feedback. {-}
 
 Remember, community founders have great levels of influence and are held in high regard by the community members. As your community grows in this phase, most members view you as the village elder. Use this power to wisely.
 
-- Learn to give great feedback.
-    - Great feedback comes from a place of empathy and contributes to the growth of the other person. Remember, it is about what they ****did**** — never about who they are.
-    - Check your emotions before giving feedback. It is extra important to choose your words carefully, since most people on the receiving end of feedback are subconsciously defensive to some extent. You want them to focus on what your say, not the delivery of it.
-    - Be as objective as you can. This means highlighting anything that is out of the ordinary — whether good or bad. Backing your arguments with examples/instances is the most helpful thing you can do.
-- Learn to take great feedback.
-    - When seeking feedback, it is important to be clear about your intentions — do you want to know the truth or are you just seeking approval?
-    - Don’t let having strong opinions about your work shut you from new or different ways to do things. The idea of feedback is to improve the quality of the end-product, not make a judgement on your ideas or your working style.
-    - A good practice in communities is to setup anonymous polls within pods or teams, where anyone can come and voice their opinions or ideas. Then, the pod of team leads can bring these up with the community and initiate discussion if required.
+* Learn to give great feedback.
+    * Great feedback comes from a place of empathy and contributes to the growth of the other person. Remember, it is about what they **did** — never about who they are.
+    * Check your emotions before giving feedback. It is extra important to choose your words carefully, since most people on the receiving end of feedback are subconsciously defensive to some extent. You want them to focus on what your say, not the delivery of it.
+    * Be as objective as you can. This means highlighting anything that is out of the ordinary — whether good or bad. Backing your arguments with examples/instances is the most helpful thing you can do.
+* Learn to take great feedback.
+    * When seeking feedback, it is important to be clear about your intentions — do you want to know the truth or are you just seeking approval?
+    * Don’t let having strong opinions about your work shut you from new or different ways to do things. The idea of feedback is to improve the quality of the end-product, not make a judgement on your ideas or your working style.
+    * A good practice in communities is to setup anonymous polls within pods or teams, where anyone can come and voice their opinions or ideas. Then, the pod of team leads can bring these up with the community and initiate discussion if required.
 
-### Expanding your influence {-}
+### Activity 22: How are things different from the early days? {-}
 
-By this stage, your community would have amassed a decent following in the larger ecosystem you are a part of. A great way to maintain the novelty and motivation of participating and running communities is to partner with other communities that share your interests and/or goals.
+> ℹ️ **Take a stock of things** 
+>
+>The people involved in any project grow with it as well. This usually happens in subtle shifts, but after a long period of time, it is not difficult to notice these shifts and discover the factors responsible for them.
 
-*Activity 21: Take a stock of things.*
+* Notice what has changed.
+    * Since the time you started your community to today, what has changed in your external environment? What are some new things — ideas, tools and technologies — that have come up?
+    * Internally, what were some unexpected consequences of the decisions your community made? These could be decisions around kicking members, doubling down on a particular bet, creating rituals, etc. For example, you may notice that the vibe of your community changes after highly visible people leave. Note the effect of such a change.
+    * Sometimes incentives can optimize for the wrong type of behaviour. What are the explicit and implicit incentive structures in your community? What are some ways people have gamed this? What new rituals or processes have sprung up? Are any of them unhealthy or unproductive?
+* Have a system to evaluate new ideas.
+    * Communities of this size come with their own set of pros and cons. What is something that your community is the best at? What is something that your community absolutely cannot do? Being aware of your constraints helps you evaluate new ideas — they might be great in general, but they could not be the most beneficial path of action for your community.
 
-- Notice what has changed.
-    - Since the time you started your community to today, what has changed in your external environment? What are some new things — ideas, tools and technologies — that have come up?
-    - Internally, what were some unexpected consequences of the decisions your community made? These could be decisions around kicking members, doubling down on a particular bet, creating rituals, etc. For example, you may notice that the vibe of your community changes after highly visible people leave. Note the effect of such a change.
-    - Sometimes, incentives optimize for the wrong type of behaviour. What are the explicit and implicit incentive structures in your community? What are some ways people have gamed this? What new rituals or processes have sprung up? Are any of them unhealthy or unproductive?
-- Have a system to evaluate new ideas.
-    - Communities of this size come with their own set of pros and cons. What is something that your community is the best at? What is something that your community absolutely cannot do? Being aware of your constraints helps you evaluate new ideas — they might be great in general, but they could not be the most beneficial path of action for your community.
+### Activity 23: Host or coodinate community-wide events. {-}
 
-*Activity 22: Host or coodinate community-wide events.*
-
-- This one is straightforward — digital communities are the closest we have come to emulating the feeling irl togetherness, but they still cannot replace the real thing.
-    - Take the charge in coordinating an irl meetup for your community members that are open to do so. This need not even be something on its own — a good idea is to meet or host a side-event at any of the tentpole events that happen in your ecosystem around the year.
-    - For example, ETH Denver has become a popular event for many crypto communities to gather and meet irl for the first time. Explore similar events in your area if all your members are in the same country or continent.
+* This one is straightforward — digital communities are the closest we have come to emulating the feeling irl togetherness, but they still cannot replace the real thing.
+    * Take the charge in coordinating an irl meetup for your community members that are open to do so. This need not even be something on its own — a good idea is to meet or host a side-event at any of the tentpole events that happen in your ecosystem around the year.
+    * For example, ETH Denver has become a popular event for many crypto communities to gather and meet irl for the first time. Explore similar events in your area if all your members are in the same country or continent.
 
 ## Common Roadblocks {-}
 
 ![[A situation like this can easily be avoided.](https://www.rt.com/news/231927-fights-rada-ukrainian-mps/)](img/9.png)
-
-[A situation like this can easily be avoided.](https://www.rt.com/news/231927-fights-rada-ukrainian-mps/)
 
 The biggest roadblocks to your community’s progress at this stage are politics and stagnation. 
 
@@ -119,17 +115,3 @@ Community building is the greatest art of the 21st century. This is because of t
 Second, is the breakdown in traditional community structures that has led to people increasingly finding themselves in their community of choice.
 
 Artists, creators and ideas have unparalleled pull today. It is our imperative to take full advantage of this, and make the world a better place.
-
----
-
-### *Sources and Further Reading:*
-
-[The Laws of Lorecore - ZORA ZINE](https://zine.zora.co/the-laws-of-lorecore-shumon-basar)
-
-[Life After Lifestyle](https://subpixel.space/entries/life-after-lifestyle/)
-
-[1,000 True Fans? Try 100 | Andreessen Horowitz](https://a16z.com/2020/02/06/1000-true-fans-try-100/)
-
-[Green Hollow | Amble Studio](https://amble.studio/green-hollow-game/)
-
-[What I Learned From My Time at TiA](https://www.reddit.com/r/TheoryOfReddit/comments/3qjsga/what_i_learned_from_my_time_at_tia/)
