--- a/05-references.rmd
+++ b/05-references.rmd
@@ -2,12 +2,9 @@
 
 We are grateful for all the operators and builders that took the time to share their thoughts, learnings and ideas online.
 
-The following links played a huge role in the creation of this playbook's first draft
+The following links played a huge role in the creation of this playbook's first draft.
 
-
-If you find your work in the list below, do drop a comment or slide through rep3's [Discord server](discord.gg/xK2WXUv3VG)!
-
-We have a special membership badge waiting for you. 😄
+If you find your work in the list below, do drop a comment or slide through rep3's [Discord server](discord.gg/xK2WXUv3VG)! We have a special membership badge waiting for you. 😄
 
 *In no particular order:*
 
