--- a/00-intro.rmd
+++ b/00-intro.rmd
@@ -102,4 +102,4 @@ Any community goes through four key stages in its lifecycle. This series has fou
 
 We must look at any community as a garden — an organic space that is ever-evolving and ever-changing. We need to have a compelling narrative that members can contribute to. We need to consciously make an effort to share power, and always favour what’s “good enough” over “what’s perfect”.
 
-So how does such a approach to community building look like? In the following posts, we shall go into the weeds, introducing new concepts, walking you through tactical exercises and informing you about key roadblocks to expect and watch out for. LFG!
+So how does such a approach to community building look like? In the following posts, we shall go into the weeds, introducing new concepts, walking you through tactical exercises and informing you about key roadblocks to expect and watch out for. LFG! 🚀
