--- a/index.rmd
+++ b/index.rmd
@@ -26,4 +26,4 @@ As participants in communities, we are all well aware of the infinite ways throu
 
 For example, the rules of building a decentralized, digital community are slightly different from building one irl. This playbook focusses mainly on these type of communities, and highlights the concepts and practices that have *seemed* to work so far.
 
-We invite you to share your experiences so we may refine this playbook, and make it a possible reference point for the community builders of tomorrow.
+We invite you to share your experiences so we may refine this playbook, and make it a possible reference point for the community builders of tomorrow. 😄
