--- a/index.rmd
+++ b/index.rmd
@@ -19,7 +19,7 @@ github-repo: Drepute/playbook
 
 ![](img/cover.png)
 
-In our quest to help communities maximise their potential, we couldn’t help but try and understand how communities work at a deeper level.
+In our quest to help communities maximize their potential, we couldn’t help but try and understand how communities work at a deeper level.
 
 - What dynamics govern them? 
 - How does an average community evolve over time? 
@@ -27,11 +27,10 @@ In our quest to help communities maximise their potential, we couldn’t help bu
 
 To answer these questions, we started putting together this community building playbook as a public good. And we invite you to co-create it with us!
 
-
 Distilling community building to a formula is no simple task, and it is also not our intention here. Instead, we aim to open a two-way dialogue with the reader, and discuss the general direction we should move in. As a result, this public good may seem incomplete, and it shall always be so.
 
-As participants in communities, we are all well aware of the infinite ways through which communities rise and fall. Further, technological developments add layers on these processes which breaks certains ground rules and introduces new ones.
+As community members, we are all well aware of the infinite ways in which communities rise and fall. To add to this complexity, technological developments often disrupt established processes and ground rules. As a result, the community building meta keeps changing.
 
-For example, the rules of building a decentralized, digital community are slightly different from building one irl. This playbook focusses mainly on these type of communities, and highlights the concepts and practices that have *seemed* to work so far.
+The rules of building a decentralized, digital community differ from building, say, an irl community. This playbook mainly focusses on the former type of communities, and highlights the concepts and practices that *seem* to work in this domain.
 
 We invite you to share your experiences so we may refine this playbook, and make it a possible reference point for the community builders of tomorrow. 😄
