--- a/00-intro.rmd
+++ b/00-intro.rmd
@@ -6,7 +6,7 @@
 
 ## The Imperative of Our Times {-}
 
-The Whole Earth ‘Lectronic Link, or [The WELL](https://en.wikipedia.org/wiki/The_WELL) is one of the oldest virtual communities that is still operational. Launched in 1985, it grew to 7,000 members and a staff of 12 full-time employees with a gross annual income of [$2 million](https://en.wikipedia.org/wiki/The_WELL#cite_note-:5-2) in just 8 short years,. These are interesting statistics, considering how the foundations of modern-day internet — that enable such communities — didn’t exist at the time.
+The Whole Earth ‘Lectronic Link, or [The WELL](https://en.wikipedia.org/wiki/The_WELL) is one of the oldest virtual communities that is still operational. Launched in 1985, it grew to 7,000 members and a staff of 12 full-time employees with a gross annual income of [$2 million](https://en.wikipedia.org/wiki/The_WELL#cite_note-:5-2) in just 8 short years. These are interesting statistics, considering how the foundations of modern-day internet — that enable such communities — didn’t exist at the time.
 
 One participant of The WELL, [Howard Rheingold](https://en.wikipedia.org/wiki/Howard_Rheingold), wrote a book aptly titled [The Virtual Community](https://www.rheingold.com/vc/book/), where he discussed the vagaries of life pertaining to online communities. The book’s prescience is uncanny.
 
