--- a/01-desert.rmd
+++ b/01-desert.rmd
@@ -102,7 +102,7 @@ Having said that, it’s the early stages, so clarity and brevity is important. 
 
 ## Common Roadblocks {-}
 
-![](img/2.png)[For the love of the immortal snail](https://www.google.com/url?q=https://www.oxfordstudent.com/2021/11/03/for-love-of-the-immortal-snail/&sa=D&source=editors&ust=1675965397292817&usg=AOvVaw0W_Y3qcJT8RtyUWGVdDTtz)
+![](img/1.png)[For the love of the immortal snail](https://www.oxfordstudent.com/2021/11/03/for-love-of-the-immortal-snail/)
 
 Communities in the beginning are ideas, and ideas die a slow death. Keeping your community alive requires consistent effort to keep the idea alive. This is harder than it seems.
 
